@@ -102,7 +102,6 @@
         padding-top: 24%;
         text-align: center;
         background-color: #f7f7f7;
-        border-radius: 50%;
         height: 250px;
         transition: background-color ease .2s;
 
